--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 :root {
-  --fuenteHeding: "PT Sans", sans-serif;
+  /* Paleta de colores */
+  --fuenteHeading: "PT Sans", sans-serif;
   --fuenteParrafos: "Open Sans", sans-serif;
 
-  /* Paleta de colores */
   --primario: #784d3c;
   --blanco: #ffffff;
-  --gris: #e1e1e1;
   --negro: #000000;
+  --gris: #e1e1e1;
 }
 html {
   box-sizing: border-box;
   font-size: 62.5%;
 }
-
 *,
 *:before,
 *:after {
@@ -33,8 +32,9 @@ a {
 }
 h1,
 h2,
-h3 {
-  font-family: var(--fuenteHeding);
+h3,
+h4 {
+  font-family: var(--fuenteHeading);
   line-height: 1.2;
 }
 h1 {
@@ -52,7 +52,6 @@ h4 {
 img {
   max-width: 100%;
 }
-/* Utilidades */
 .no-margin {
   margin: 0;
 }
@@ -62,6 +61,7 @@ img {
 .centrar-texto {
   text-align: center;
 }
+/* Header */
 .webp .header {
   background-image: url(/img/banner.webp);
 }
@@ -75,8 +75,8 @@ img {
   background-position: center center;
 }
 .header__texto {
-  color: var(--blanco);
   text-align: center;
+  color: var(--blanco);
   margin-top: 5rem;
 }
 @media (min-width: 768px) {
@@ -85,7 +85,7 @@ img {
   }
 }
 .barra {
-  padding-top: 3rem;
+  padding-top: 4rem;
 }
 @media (min-width: 768px) {
   .barra {
@@ -98,22 +98,22 @@ img {
   color: var(--blanco);
 }
 .logo__nombre {
-  font-weight: 400;
+  font-weight: normal;
 }
 .logo__bold {
   font-weight: 700;
-}
-.navegacion__enlace {
-  display: block;
-  text-align: center;
-  font-size: 1.8rem;
-  color: var(--blanco);
 }
 @media (min-width: 768px) {
   .navegacion {
     display: flex;
     gap: 2rem;
   }
+}
+.navegacion__enlace {
+  display: block;
+  text-align: center;
+  font-size: 1.8rem;
+  color: var(--blanco);
 }
 @media (min-width: 768px) {
   .contenido-principal {
@@ -132,13 +132,13 @@ img {
 }
 .boton {
   display: block;
-  font-family: var(--fuenteHeding);
+  font-family: var(--fuenteHeading);
   color: var(--blanco);
   text-align: center;
-  font-weight: 700;
-  text-transform: uppercase;
   padding: 1rem 3rem;
   font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 700;
   margin-bottom: 2rem;
   border: none;
 }
@@ -168,22 +168,22 @@ img {
   margin-bottom: 0;
 }
 .widget-curso__label {
-  font-family: var(--fuenteHeding);
-  font-weight: bold;
+  font-family: var(--fuenteHeading);
+  font-weight: 700;
 }
 .widget-curso__info {
-  font-weight: 400;
+  font-weight: normal;
 }
 .widget-curso__label,
 .widget-curso__info {
   font-size: 2rem;
 }
-/* footer */
 .footer {
   background-color: var(--negro);
   padding-bottom: 3rem;
   margin-top: 4rem;
 }
+/* Sobre nosotros */
 @media (min-width: 768px) {
   .sobre-nosotros {
     display: grid;
@@ -191,7 +191,7 @@ img {
     column-gap: 2rem;
   }
 }
-/* Curso */
+/* Cursos */
 .curso {
   padding: 3rem 0;
   border-bottom: 1px solid var(--gris);
@@ -205,14 +205,13 @@ img {
 }
 .curso:last-of-type {
   border: none;
-  margin-bottom: 0;
 }
 .curso__label {
-  font-family: var(--fuenteHeding);
+  font-family: var(--fuenteHeading);
   font-weight: bold;
 }
 .curso__info {
-  font-weight: 400;
+  font-weight: normal;
 }
 .curso__label,
 .curso__info {
@@ -227,7 +226,7 @@ img {
 }
 .formulario {
   background-color: var(--blanco);
-  margin: -5rem auto 0;
+  margin: -5rem auto 0 auto;
   width: 95%;
   padding: 5rem;
 }
@@ -242,7 +241,6 @@ img {
 }
 .campo__field {
   flex: 1;
-  border: 1px solid var(--gris);
 }
 .campo__field--textarea {
   height: 20rem;
